// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCardChartLegend Component should handle variations in data when returning legend items: legend item, MISSING tooltip content 1`] = `
<Unknown
  className="victory-legend-item"
  component="a"
  icon={
    <div
      aria-hidden={true}
      className="legend-icon"
      style={
        Object {
          "backgroundColor": "#ipsum",
          "visibility": "visible",
        }
      }
    />
  }
  isDisabled={false}
  tabIndex={0}
  variant="link"
>
  lorem ispum
</Unknown>
`;

exports[`GraphCardChartLegend Component should handle variations in data when returning legend items: legend item, WITH tooltip content 1`] = `
<Tooltip
  appendTo={[Function]}
  aria="describedby"
  boundary="window"
  className=""
  content={
    <p>
      dolor sit
    </p>
  }
  distance={-10}
  enableFlip={true}
  entryDelay={100}
  exitDelay={0}
  flipBehavior={
    Array [
      "top",
      "right",
      "bottom",
      "left",
      "top",
      "right",
      "bottom",
    ]
  }
  id=""
  isAppLauncher={false}
  isContentLeftAligned={false}
  isVisible={false}
  maxWidth="18.75rem"
  position="top"
  tippyProps={Object {}}
  trigger="mouseenter focus"
  zIndex={9999}
>
  <Unknown
    className="victory-legend-item"
    component="a"
    icon={
      <div
        aria-hidden={true}
        className="legend-icon"
        style={
          Object {
            "backgroundColor": "#ipsum",
            "visibility": "visible",
          }
        }
      />
    }
    isDisabled={false}
    tabIndex={0}
    variant="link"
  >
    lorem ispum
  </Unknown>
</Tooltip>
`;

exports[`GraphCardChartLegend Component should handle variations in data when returning legend items: legend item, disabled 1`] = `
<Unknown
  className="victory-legend-item"
  component="a"
  icon={
    <EyeSlashIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      title={null}
    />
  }
  isDisabled={true}
  tabIndex={0}
  variant="link"
>
  lorem ispum
</Unknown>
`;

exports[`GraphCardChartLegend Component should render a basic component: basic 1`] = `
<Fragment>
  <Tooltip
    appendTo={[Function]}
    aria="describedby"
    boundary="window"
    className=""
    content={
      <p>
        t(curiosity-graph.loremIpsumLegendTooltip)
      </p>
    }
    distance={-10}
    enableFlip={true}
    entryDelay={100}
    exitDelay={0}
    flipBehavior={
      Array [
        "top",
        "right",
        "bottom",
        "left",
        "top",
        "right",
        "bottom",
      ]
    }
    id=""
    isAppLauncher={false}
    isContentLeftAligned={false}
    isVisible={false}
    key="curiosity-tooltip-loremIpsum"
    maxWidth="18.75rem"
    position="top"
    tippyProps={Object {}}
    trigger="mouseenter focus"
    zIndex={9999}
  >
    <Component
      className="victory-legend-item"
      component="a"
      icon={
        <div
          aria-hidden={true}
          className="legend-icon"
          style={
            Object {
              "backgroundColor": "#000000",
              "visibility": "visible",
            }
          }
        />
      }
      isDisabled={false}
      key="curiosity-button-loremIpsum"
      tabIndex={0}
      variant="link"
    >
      t(curiosity-graph.loremIpsumLabel, [object Object])
    </Component>
  </Tooltip>
</Fragment>
`;

exports[`GraphCardChartLegend Component should render basic data: data 1`] = `
<Fragment>
  <Tooltip
    appendTo={[Function]}
    aria="describedby"
    boundary="window"
    className=""
    content={
      <p>
        t(curiosity-graph.loremIpsumLegendTooltip)
      </p>
    }
    distance={-10}
    enableFlip={true}
    entryDelay={100}
    exitDelay={0}
    flipBehavior={
      Array [
        "top",
        "right",
        "bottom",
        "left",
        "top",
        "right",
        "bottom",
      ]
    }
    id=""
    isAppLauncher={false}
    isContentLeftAligned={false}
    isVisible={false}
    key="curiosity-tooltip-loremIpsum"
    maxWidth="18.75rem"
    position="top"
    tippyProps={Object {}}
    trigger="mouseenter focus"
    zIndex={9999}
  >
    <Component
      className="victory-legend-item"
      component="a"
      icon={
        <div
          aria-hidden={true}
          className="legend-icon"
          style={
            Object {
              "backgroundColor": "#000000",
              "visibility": "visible",
            }
          }
        />
      }
      isDisabled={false}
      key="curiosity-button-loremIpsum"
      tabIndex={0}
      variant="link"
    >
      t(curiosity-graph.loremIpsumLabel, [object Object])
    </Component>
  </Tooltip>
  <Tooltip
    appendTo={[Function]}
    aria="describedby"
    boundary="window"
    className=""
    content={
      <p>
        t(curiosity-graph.ametConsecteturLegendTooltip)
      </p>
    }
    distance={-10}
    enableFlip={true}
    entryDelay={100}
    exitDelay={0}
    flipBehavior={
      Array [
        "top",
        "right",
        "bottom",
        "left",
        "top",
        "right",
        "bottom",
      ]
    }
    id=""
    isAppLauncher={false}
    isContentLeftAligned={false}
    isVisible={false}
    key="curiosity-tooltip-ametConsectetur"
    maxWidth="18.75rem"
    position="top"
    tippyProps={Object {}}
    trigger="mouseenter focus"
    zIndex={9999}
  >
    <Component
      className="victory-legend-item"
      component="a"
      icon={
        <EyeSlashIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        />
      }
      isDisabled={true}
      key="curiosity-button-ametConsectetur"
      tabIndex={0}
      variant="link"
    >
      t(curiosity-graph.ametConsecteturLabel, [object Object])
    </Component>
  </Tooltip>
  <Tooltip
    appendTo={[Function]}
    aria="describedby"
    boundary="window"
    className=""
    content={
      <p>
        t(curiosity-graph.thresholdLegendTooltip)
      </p>
    }
    distance={-10}
    enableFlip={true}
    entryDelay={100}
    exitDelay={0}
    flipBehavior={
      Array [
        "top",
        "right",
        "bottom",
        "left",
        "top",
        "right",
        "bottom",
      ]
    }
    id=""
    isAppLauncher={false}
    isContentLeftAligned={false}
    isVisible={false}
    key="curiosity-tooltip-dolorSit"
    maxWidth="18.75rem"
    position="top"
    tippyProps={Object {}}
    trigger="mouseenter focus"
    zIndex={9999}
  >
    <Component
      className="victory-legend-item"
      component="a"
      icon={
        <hr
          aria-hidden={true}
          className="threshold-legend-icon"
          style={
            Object {
              "borderTopColor": "#ff0000",
              "visibility": "visible",
            }
          }
        />
      }
      isDisabled={false}
      key="curiosity-button-dolorSit"
      tabIndex={0}
      variant="link"
    >
      t(curiosity-graph.thresholdLabel)
    </Component>
  </Tooltip>
  <Tooltip
    appendTo={[Function]}
    aria="describedby"
    boundary="window"
    className=""
    content={
      <p>
        t(curiosity-graph.thresholdLegendTooltip)
      </p>
    }
    distance={-10}
    enableFlip={true}
    entryDelay={100}
    exitDelay={0}
    flipBehavior={
      Array [
        "top",
        "right",
        "bottom",
        "left",
        "top",
        "right",
        "bottom",
      ]
    }
    id=""
    isAppLauncher={false}
    isContentLeftAligned={false}
    isVisible={false}
    key="curiosity-tooltip-nonCursus"
    maxWidth="18.75rem"
    position="top"
    tippyProps={Object {}}
    trigger="mouseenter focus"
    zIndex={9999}
  >
    <Component
      className="victory-legend-item"
      component="a"
      icon={
        <hr
          aria-hidden={true}
          className="threshold-legend-icon"
          style={
            Object {
              "borderTopColor": "#ff0000",
              "visibility": "visible",
            }
          }
        />
      }
      isDisabled={false}
      key="curiosity-button-nonCursus"
      tabIndex={0}
      variant="link"
    >
      t(curiosity-graph.thresholdLabel)
    </Component>
  </Tooltip>
</Fragment>
`;
